--- a/src/categories.styles.scss
+++ b/src/categories.styles.scss
@@ -1,49 +1,43 @@
-
 .categories-container {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 
 .category-container {
   min-width: 30%;
-  height: 340px;
+  height: 240px;
   flex: 1 1 auto;
   display: flex;
   align-items: center;
   justify-content: center;
   border: 1px solid black;
-  margin: 0 7.5px 35px;
+  margin: 0 7.5px 15px;
   overflow: hidden;
-}
 
-
-
-.category-container:hover{
+  &:hover {
     cursor: pointer;
-}
 
-.category-container:hover.background-image {
-    transform: scale(1.1);
-    transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+    & .background-image {
+      transform: scale(1.1);
+      transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+    }
+
+    & .category-body-container {
+      opacity: 0.9;
+    }
   }
 
-  .category-container:hover.category-body-container {
-    opacity: 0.9;
-  }
-
-  .category-container.large {
+  &.large {
     height: 380px;
   }
 
-  .category-container:first-child {
+  &:first-child {
     margin-right: 7.5px;
   }
 
-
-  .category-container:last-child {
+  &:last-child {
     margin-left: 7.5px;
   }
 
@@ -54,10 +48,8 @@
     background-position: center;
   }
 
-
-.category-body-container {
+  .category-body-container {
     height: 90px;
-    margin: 0 6px 0;
     padding: 0 25px;
     display: flex;
     flex-direction: column;
@@ -67,28 +59,17 @@
     background-color: white;
     opacity: 0.7;
     position: absolute;
-  }
 
-  .category-body-container:hover{
+    h2 {
       font-weight: bold;
       margin: 0 6px 0;
       font-size: 22px;
       color: #4a4a4a;
+    }
+
+    p {
       font-weight: lighter;
       font-size: 16px;
     }
-
-    .title:hover {
-        font-weight: bold;
-        margin: 0 6px 0;
-        font-size: 22px;
-        color: #4a4a4a;
-      }
-
-.shopNow:hover {
-    
-            font-weight: lighter;
-            font-size: 16px;
-        
-      }
-  
+  }
+}
