--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -6,12 +6,15 @@
     height: 350px;
     align-items: center;
     position: relative;
+    
+
   
     img {
       width: 100%;
       height: 95%;
-      object-fit: cover;
+      display: flex;
       margin-bottom: 5px;
+      flex-wrap: wrap;
     }
   
     button {
